# jsonrpsee

./: Cargo.toml
benches/: Cargo.toml  bench.rs  benches.rs  helpers.rs
dev/bench/: data.js
examples/: Cargo.toml  http.rs  proc_macro.rs  substrate_test.rs  ws.rs  ws_mem_leak.rs  ws_sub_with_params.rs  ws_subscription.rs
examples/src/: foo.rs  main.rs
http-client/: Cargo.toml
http-client/src/: client.rs
http-server/: Cargo.toml
http-server/src/: server.rs  tests.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
src/ws/: server.rs  types.rs
test-utils/: Cargo.toml
tests/: Cargo.toml
tests/tests/: helpers.rs
types/: Cargo.toml
types/src/: client.rs
types/src/v2/: params.rs
utils/: Cargo.toml
utils/src/server/: rpc_module.rs
ws-client/: Cargo.toml
ws-client/src/: client.rs  helpers.rs  manager.rs  tests.rs  transport.rs
ws-server/: Cargo.toml
ws-server/src/: server.rs  tests.rs
