[package]
name = "jsonrpsee-examples"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "HTTP client for JSON-RPC"
edition = "2018"
license = "MIT"

[dependencies]
async-std = "1.9.0"
env_logger = "0.8.2"
futures = "0.3"
jsonrpsee-http-client = { path = "../http-client", version = "0.1" }
jsonrpsee-http-server = { path = "../http-server", version = "0.1" }
jsonrpsee-proc-macros = { path = "../proc-macros", version = "0.2" }
jsonrpsee-types = { path = "../types", version = "0.1" }
jsonrpsee-utils = { path = "../utils", version = "0.1" }
log = "0.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
unicase = "2.6"
url = "2.2"

[dev-dependencies]
jsonrpsee-test-utils = { path = "../test-utils" }
